# audiolab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  create_midi.py  create_wav.py  generate_references.py
data/references/: README.md
docs/: agent_usage.md  architecture.md  audiolab_migration_audit.md  block_registry.md  graph_schema.md  minimal_piano_note.md  object_based_physical_modeling.md  physical_framework.md  physical_ports.md  piano_blocks.md  roadmap.md  solver_implementation_guide.md  user_manual.md
docs/audiolab/: README.md  architecture.md  block_api.md  blocks.md  calibration.md  cli.md  examples_index.md  experiments.md  graph_schema.md  gui.md  guide.md  pasp_active_learning.md  pasp_autoresearch_loop.md  pasp_block_io_reference.md  pasp_dataset_evaluation.md  todo.md  (+11 more)
examples/: README.md  bootstrap_piano_phrase_references.py  rebuild_autoresearch_memory.py  register_pasp_model_candidate.py  run_autoresearch_harness.py  run_bell_example.py  run_calibration_example.py  run_multistring_custom_example.py  run_pasp_active_learning.py  run_pasp_autoresearch_cycle.py  run_pasp_c4_bidirectional_eval.py  run_pasp_dataset_eval.py  run_pasp_family_b3_d4_eval.py  run_pasp_lifecycle_eval.py  run_pasp_note_example.py  run_pasp_performance_eval.py  run_pasp_register_a3_c5_eval.py  run_pasp_string_group_a3_c5_eval.py  smoke_pasp_autoresearch.py
scripts/: apply_block_explanations.py  apply_block_formulas.py  block_explanations.py  block_formulas.json  block_formulas.py  generate_block_docs.py  generate_migration_audit.py  update_golden_audio_manifest.py
tests/: conftest.py  golden_audio_utils.py  support.py
(+715 files in other folders)
