[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiolab"
version = "0.1.0"
description = "DSP Lab + PASP physical piano modeling and headless autoresearch (no agents)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Audiolab contributors"}]
dependencies = [
    "pydantic>=2",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "matplotlib>=3.7",
    "pyqtgraph>=0.13",
    "PyYAML>=6",
    "PyQt6>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
pianoteq = ["mido>=1.3"]

[project.scripts]
dsp-lab = "dsp_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
